--- a/index.html
+++ b/index.html
@@ -12,5 +12,27 @@
     <link rel="stylesheet" href="style.css" />
     <title>My Bank Manager</title>
   </head>
-  <body></body>
+  <body>
+    <!-- TOP -->
+    <nav>
+      <p class="welcome">Log in to get started</p>
+      <img src="logo.png" class="logo" alt="Logo" />
+      <form class="login">
+        <input
+          type="text"
+          placeholder="user"
+          class="login__input login__input--user"
+        />
+        <input
+          type="text"
+          placeholder="PIN"
+          maxlength="4"
+          class="login__input login__input--pin"
+        />
+        <button class="login__btn">&rarr;</button>
+      </form>
+    </nav>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
